Added Trail MIx, Portal Gun , Gravity Gun, Trail Mix, Death Counter and Hats Mods Updated IC2

--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -460,6 +460,7 @@ canning {
     I:item.rottenFlesh_200=200
     I:item.saguaro.fruit_200=200
     I:item.spiderEye_100=100
+    I:item.trailmix_100=100
     I:item.waterdrop_100=100
     I:itemCellBioRef_600=600
     I:itemCellCoalRef_600=600
