Ignoring all the files that need to be ignored.

--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -95,6 +95,8 @@ alloysmelting {
     I:item.milk_100=100
     I:item.pickaxeGold_130=130
     I:item.pickaxeIron_130=130
+    I:item.projectred.exploration.sicklegold_130=130
+    I:item.projectred.exploration.sickleiron_130=130
     I:item.railcraft.armor.steel.boots_130=130
     I:item.railcraft.armor.steel.helmet_130=130
     I:item.railcraft.armor.steel.legs_130=130
@@ -416,6 +418,14 @@ canning {
     I:item.GT_Cells.15_1600=1600
     I:item.GT_Materials.7_100=100
     I:item.GT_Materials.9_800=800
+    I:"item.aether:Blue Berry_100"=100
+    I:"item.aether:Candy Cane_100"=100
+    I:"item.aether:Enchanted Berry_400"=400
+    I:"item.aether:Gingerbread Man_100"=100
+    I:"item.aether:Gummie Swet.Golden Gummie Swet_1000"=1000
+    I:"item.aether:Orange_200"=200
+    I:"item.aether:Rainbow Strawberry_400"=400
+    I:"item.aether:Wyndberry_200"=200
     I:item.appleGold_200=200
     I:item.apple_200=200
     I:item.beefCooked_400=400
@@ -1203,6 +1213,8 @@ inductionsmelter {
     B:item.leggingsIron_true=true
     B:item.pickaxeGold_true=true
     B:item.pickaxeIron_true=true
+    B:item.projectred.exploration.sicklegold_true=true
+    B:item.projectred.exploration.sickleiron_true=true
     B:item.railcraft.armor.steel.boots_true=true
     B:item.railcraft.armor.steel.helmet_true=true
     B:item.railcraft.armor.steel.legs_true=true
@@ -1518,6 +1530,10 @@ maceration {
     B:item.pickaxeGold_true=true
     B:item.pickaxeIron_true=true
     B:item.pickaxeWood_true=true
+    B:item.projectred.exploration.sicklediamond_true=true
+    B:item.projectred.exploration.sicklegold_true=true
+    B:item.projectred.exploration.sickleiron_true=true
+    B:item.projectred.exploration.sicklewood_true=true
     B:item.railcraft.armor.steel.boots_true=true
     B:item.railcraft.armor.steel.helmet_true=true
     B:item.railcraft.armor.steel.legs_true=true
@@ -2049,6 +2065,8 @@ smelting {
     B:item.leggingsIron_true=true
     B:item.pickaxeGold_true=true
     B:item.pickaxeIron_true=true
+    B:item.projectred.exploration.sicklegold_true=true
+    B:item.projectred.exploration.sickleiron_true=true
     B:item.railcraft.armor.steel.boots_true=true
     B:item.railcraft.armor.steel.helmet_true=true
     B:item.railcraft.armor.steel.legs_true=true
