--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -48,7 +48,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hmmpu6ar
+        S:lastStarted=hmxxh97z
     }
 
 }
