--- a/config/IC2.cfg
+++ b/config/IC2.cfg
@@ -138,7 +138,11 @@ general {
 
     # List of blocks and items which should not be turned into scrap by the recycler. Comma separated, format is id-metadata
     S:recyclerBlacklist=102, 280, 332, 4024
+
+    # Maximum number of audio sources, only change if you know what you're doing
     I:soundSourceLimit=32
+
+    # Enable sounds
     B:soundsEnabled=true
 
     # List of valuable ores the miner should look for. Comma separated, format is id-metadata:value where value should be at least 1 to be considered by the miner
@@ -294,6 +298,7 @@ item {
     I:itemToolDrill=29979
     I:itemToolForgeHammer=29784
     I:itemToolHoe=29863
+    I:itemToolIridiumDrill=29988
     I:itemToolMEter=29926
     I:itemToolMiningLaser=29952
     I:itemToolPainter=29914
