--- a/config/NEI.cfg
+++ b/config/NEI.cfg
@@ -23,6 +23,7 @@ keys.gui.prev=201
 keys.gui.recipe=19
 keys.gui.search=33
 keys.gui.usage=22
+keys.neiplugins.recipeList=38
 keys.world.chunkoverlay=67
 keys.world.creative=0
 keys.world.dawn=0
@@ -33,6 +34,18 @@ keys.world.midnight=0
 keys.world.moboverlay=65
 keys.world.noon=0
 keys.world.rain=0
+mistaqur.showHiddenForestryItems=false
+neiplugins.developer.showNamesInFluidRegistry=false
+neiplugins.developer.showOreDictionaryNames=false
+neiplugins.developer.showUsageInOreDictionary=true
+neiplugins.fueltooltip.enableContextTooltip=true
+neiplugins.fueltooltip.showTooltipForItemStack=true
+neiplugins.fueltooltip.showTooltipForLiquidContainer=true
+neiplugins.fueltooltip.showTooltipForLiquidItem=true
+neiplugins.fueltooltip.showTooltipInFluidRegistry=true
+neiplugins.showForestryPowerInfoTooltip=true
+neiplugins.update.checkAllUpdates=false
+neiplugins.update.checkUpdate=false
 options.edge-align buttons=false
 world.highlight_tips=false
 world.highlight_tips.x=5000
