--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -48,7 +48,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hmxxh97z
+        S:lastStarted=hmxyoqx1
     }
 
 }
