Fixed some config stuff

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -48,7 +48,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hmxyoqx1
+        S:lastStarted=hmy0zmhx
     }
 
 }
