--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -181,6 +181,7 @@ gui {
     I:idGuiAirCollector=135
     I:idGuiAirCompressor=129
     I:idGuiAirDistributor=136
+    I:idGuiAirLockController=148
     I:idGuiAirSealer=139
     I:idGuiBuggyCraftingBench=131
     I:idGuiCargoLoader=141
