--- a/config/NEI.cfg
+++ b/config/NEI.cfg
@@ -4,6 +4,7 @@
 
 checkUpdates=true
 mistaqur.showHiddenForestryItems=false
+mistaqur.showUsageInOreDictionary=false
 options.edge-align buttons=false
 
 #Change these options if you have a different mod installed on the server that handles the commands differently, Eg. Bukkit Essentials
@@ -18,9 +19,9 @@ command
 
 inventory
 {
-	cheatmode=2
+	cheatmode=0
 	gamemodes=creative, creative+, adventure
-	hidden=false
+	hidden=true
 	itemIDs=1
 	layoutstyle=0
 	#For those who can't help themselves.
@@ -57,17 +58,29 @@ keys
 
 neiplugins
 {
-	developer.showNamesInFluidRegistry=false
-	developer.showOreDictionaryNames=false
-	developer.showUsageInOreDictionary=true
-	fueltooltip.enableContextTooltip=true
-	fueltooltip.showTooltipForItemStack=true
-	fueltooltip.showTooltipForLiquidContainer=true
-	fueltooltip.showTooltipForLiquidItem=true
-	fueltooltip.showTooltipInFluidRegistry=true
 	showForestryPowerInfoTooltip=true
-	update.checkAllUpdates=false
-	update.checkUpdate=false
+	
+	developer
+	{
+		showNamesInFluidRegistry=false
+		showOreDictionaryNames=false
+		showUsageInOreDictionary=true
+	}
+	
+	fueltooltip
+	{
+		enableContextTooltip=true
+		showTooltipForItemStack=true
+		showTooltipForLiquidContainer=true
+		showTooltipForLiquidItem=true
+		showTooltipInFluidRegistry=true
+	}
+	
+	update
+	{
+		checkAllUpdates=false
+		checkUpdate=false
+	}
 }
 
 
