--- a/config/BiblioWoodsForestry.cfg
+++ b/config/BiblioWoodsForestry.cfg
@@ -17,14 +17,31 @@ block {
     I:DisplayCaseSet5=2321
     I:Label=2330
     I:Label2=2331
+    I:MapFrame=2369
+    I:MapFrame2=2370
     I:PotionShelf=2322
     I:PotionShelf2=2323
+    I:Seat=2367
+    I:Seat2=2368
     I:Shelf=2324
     I:Shelf2=2325
     I:Table=2326
     I:Table2=2327
     I:ToolRack=2328
     I:ToolRack2=2329
+}
+
+
+####################
+# item
+####################
+
+item {
+    I:SeatBack=22314
+    I:SeatBack2=22315
+    I:SeatBack3=22316
+    I:SeatBack4=22317
+    I:SeatBack5=22318
 }
 
 
