--- a/config/buildcraft/main.conf
+++ b/config/buildcraft/main.conf
@@ -116,7 +116,7 @@ general {
 
     # Allows admins to whitelist or blacklist pumping of specific fluids in specific dimensions.
     # Eg. "-/-1/Lava" will disable lava in the nether. "-/*/Lava" will disable lava in any dimension. "+/0/*" will enable any fluid in the overworld.
-    # Entries are comma seperated, banned fluids have precedence over allowed ones.Default is "+/*/*,+/-1/Lava" - the second redundant entry ("+/-1/Lava") is there to show the format.
+    # Entries are comma seperated, banned fluids have precedence over allowed ones.Default is "+/*/*,+/-1/Lava" - the second redundant entry ("+/-1/lava") is there to show the format.
     S:pumping.controlList=+/*/*,+/-1/lava
 
     # Quarry cannot be picked back up after placement
@@ -125,7 +125,7 @@ general {
 
     # set to true for version check on startup
     B:update.check=true
-    S:version=4.1.0-11-g3a39b28
+    S:version=4.1.2
 }
 
 
