--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -84,6 +84,7 @@ block {
     I:block.fluid.steam=491
     I:block.glass=474
     I:block.hidden=473
+    I:block.lamp=479
     I:block.machine.alpha=451
     I:block.machine.beta=452
     I:block.machine.delta=476
@@ -113,6 +114,7 @@ carts {
     B:cart.anchor.personal=true
     B:cart.bore=true
     B:cart.energy.batbox=true
+    B:cart.energy.cesu=true
     B:cart.energy.mfe=true
     B:cart.energy.mfsu=true
     B:cart.gift=true
@@ -199,6 +201,7 @@ item {
     I:cart.anchor.personal=7512
     I:cart.bore=7513
     I:cart.energy.batbox=7514
+    I:cart.energy.cesu=7571
     I:cart.energy.mfe=7515
     I:cart.energy.mfsu=7516
     I:cart.gift=7517
@@ -212,6 +215,7 @@ item {
     I:cart.work=7525
     I:dust=7526
     I:emblem=7527
+    I:firestone.cracked=7572
     I:firestone.cut=7528
     I:firestone.raw=7529
     I:firestone.refined=7530
@@ -244,6 +248,7 @@ item {
     I:tool.bore.head.iron=7557
     I:tool.bore.head.steel=7558
     I:tool.crowbar=7559
+    I:tool.crowbar.magic=7573
     I:tool.crowbar.reinforced=7560
     I:tool.magnifying.glass=7561
     I:tool.signal.tuner=7562
@@ -467,6 +472,11 @@ recipes {
 
         carpenter {
             # 
+            # change to 'creosote.block=false' to disable the Carptenter Creosote Block recipe
+            # 
+            B:creosote.block=true
+
+            # 
             # change to 'ties=false' to disable the Carptenter Tie recipe
             # 
             B:ties=true
@@ -494,10 +504,19 @@ subblocks {
     B:cube.brick.sandy=true
     B:cube.coke=true
     B:cube.concrete=true
+    B:cube.creosote=true
     B:cube.crushed.obsidian=true
     B:cube.steel=true
     B:cube.stone.abyssal=true
     B:cube.stone.quarried=true
+    B:lamp.abyssal.fitted=true
+    B:lamp.bleachedbone.fitted=true
+    B:lamp.bloodstained.fitted=true
+    B:lamp.frostbound.fitted=true
+    B:lamp.infernal.fitted=true
+    B:lamp.nether.fitted=true
+    B:lamp.quarried.fitted=true
+    B:lamp.sandy.fitted=true
     B:machine.alpha.anchor.admin=true
     B:machine.alpha.anchor.personal=true
     B:machine.alpha.anchor.world=true
@@ -551,7 +570,9 @@ subblocks {
     B:signal.box.block.relay=true
     B:signal.box.capacitor=true
     B:signal.box.controller=true
+    B:signal.box.interlock=true
     B:signal.box.receiver=true
+    B:signal.box.sequencer=true
     B:signal.distant=true
     B:signal.distant.dual=true
     B:signal.switch.lever=true
@@ -771,7 +792,14 @@ tweaks {
         ####################
 
         boiler {
+            # 
+            # adjust the heat value of BioFuel in a Boiler
+            # 
             D:biofuelMultipler=1.0
+
+            # 
+            # adjust the heat value of Fuel in a Boiler
+            # 
             D:fuelMultiplier=1.0
         }
 
