--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -780,7 +780,25 @@ cnc {
 ####################
 
 compression {
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@12b520a.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@18be08e.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@18fde079.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@19336fab.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@195cb8a2.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@2372f2d5.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@34cdcafc.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@3a452494.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@3a73a8c.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@3afcabd6.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@43eda401.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@521ab8b7.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@523c5070.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@530192b7.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@5839788c.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@5c36f4da.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@5cc5450c.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@650a73bc.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@7f7d0638.32767_true"=true
     B:dustAsh_true=true
     B:dustGlowstone_true=true
     B:dustLazurite_true=true
@@ -1270,6 +1288,7 @@ grinder {
     B:oreApatite_true=true
     B:oreBauxite_true=true
     B:oreCassiterite_true=true
+    B:oreCertusQuartz_true=true
     B:oreCinnabar_true=true
     B:oreCoal_true=true
     B:oreCooperite_true=true
@@ -1311,6 +1330,7 @@ hammercrushing {
     B:oreApatite_true=true
     B:oreBauxite_true=true
     B:oreCassiterite_true=true
+    B:oreCertusQuartz_true=true
     B:oreCinnabar_true=true
     B:oreCoal_true=true
     B:oreCooperite_true=true
@@ -1895,6 +1915,11 @@ liquidtransposerfilling {
 ####################
 
 maceration {
+    B:AppEng.Tools.QuartzAxe_true=true
+    B:AppEng.Tools.QuartzHoe_true=true
+    B:AppEng.Tools.QuartzPickAxe_true=true
+    B:AppEng.Tools.QuartzShovel_true=true
+    B:AppEng.Tools.QuartzSword_true=true
     B:blockAluminium_true=true
     B:blockAsh_true=true
     B:blockBrass_true=true
@@ -1956,6 +1981,7 @@ maceration {
     B:boltZinc_true=true
     B:cellEmpty_true=true
     B:gemApatite_true=true
+    B:gemCertusQuartz_true=true
     B:gemCharcoal_true=true
     B:gemCoal_true=true
     B:gemDiamond_true=true
@@ -1967,6 +1993,7 @@ maceration {
     B:gemGreenSapphire_true=true
     B:gemIridium_true=true
     B:gemLapis_true=true
+    B:gemNetherQuartz_true=true
     B:gemOlivine_true=true
     B:gemRuby_true=true
     B:gemSapphire_true=true
@@ -2141,6 +2168,7 @@ maceration {
     B:oreApatite_true=true
     B:oreBauxite_true=true
     B:oreCassiterite_true=true
+    B:oreCertusQuartz_true=true
     B:oreCinnabar_true=true
     B:oreCoal_true=true
     B:oreCooperite_true=true
