--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Wed Oct 30 18:39:32 MDT 2013
+#Tue Nov 19 22:51:43 MST 2013
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
