--- a/config/NEI.cfg
+++ b/config/NEI.cfg
@@ -3,6 +3,7 @@
 #Deleting any element will restore it to it's default value
 
 checkUpdates=true
+mistaqur.showFluidRegistryFuelTooltip=false
 mistaqur.showHiddenForestryItems=false
 mistaqur.showUsageInOreDictionary=false
 options.edge-align buttons=false
@@ -21,7 +22,7 @@ inventory
 {
 	cheatmode=0
 	gamemodes=creative, creative+, adventure
-	hidden=true
+	hidden=false
 	itemIDs=1
 	layoutstyle=0
 	#For those who can't help themselves.
@@ -34,26 +35,37 @@ inventory
 
 keys
 {
-	gui.back=14
-	gui.enchant=45
-	gui.hide=24
-	gui.next=209
-	gui.potion=25
-	gui.prev=201
-	gui.recipe=19
-	gui.search=33
-	gui.usage=22
-	neiplugins.recipeList=38
-	world.chunkoverlay=67
-	world.creative=0
-	world.dawn=0
-	world.dusk=0
-	world.heal=0
-	world.highlight_tips=82
-	world.midnight=0
-	world.moboverlay=65
-	world.noon=0
-	world.rain=0
+	gui
+	{
+		back=14
+		enchant=45
+		hide=24
+		next=209
+		potion=25
+		prev=201
+		recipe=19
+		search=33
+		usage=22
+	}
+	
+	neiplugins
+	{
+		recipeList=38
+	}
+	
+	world
+	{
+		chunkoverlay=67
+		creative=0
+		dawn=0
+		dusk=0
+		heal=0
+		highlight_tips=0
+		midnight=0
+		moboverlay=65
+		noon=0
+		rain=0
+	}
 }
 
 neiplugins
@@ -82,7 +94,6 @@ neiplugins
 		checkUpdate=false
 	}
 }
-
 
 world
 {
