--- a/config/DamageIndicatorsMod.cfg
+++ b/config/DamageIndicatorsMod.cfg
@@ -92,17 +92,26 @@ portrait {
     ####################
 
     behavior {
+        # If the portrait is not visible for you or renders incorrectly, set this to true.
+        B:AlternateRenderMethod=false
+
         # Should the debug window(F3) Hide the portrait window.
         B:DebugHidesWindow=true
 
         # Set to false to Disable.
         B:Enable=true
 
+        # Only set this to true if you have rendering problems. It can decrease preformance.
+        B:HighCompatibilityMode=false
+
         # How long the Portrait will stay after you are no longer targetting a mob. -1 to last forever or until the mob is unloaded.
         I:Portrait_Lifetime=160
 
         # How long the Portrait will stay after you are no longer targetting a mob. -1 to last forever or until the mob is unloaded.
         B:"Show Potion Effects"=true
+
+        # Hide boss health bars.
+        B:SupressBossHealth=false
     }
 
     ####################
@@ -113,7 +122,7 @@ portrait {
 
     appearance {
         # Change the size of the portrait preview.
-        D:Gui_Scale=0.76
+        D:Gui_Scale=0.7599999904632568
 
         # When true, mobs in the portrait are locked in place. When false, they turn the same same as they are turning in the world.
         B:Lock_Mob_Position=true
