--- a/config/BiblioCraft.cfg
+++ b/config/BiblioCraft.cfg
@@ -78,6 +78,7 @@ general {
 ####################
 
 item {
+    I:Atlas=22233
     I:Chase=22224
     I:ClipBoard=22232
     I:CreativeModeLock=22231
