--- a/config/IC2.cfg
+++ b/config/IC2.cfg
@@ -52,8 +52,14 @@ block {
 ####################
 
 general {
+    # Eneable the advanced Nuclear Reactor Colling System *high* workin Progress not stable
+    B:Advreactorcolling=false
+
     # EU Cost of 1000mB of Uu-Matter without Scrap
     I:MatterfabBaseUuCost=10000000
+
+    # Disable the vanilla ender chest
+    B:disableEnderChest=false
 
     # Enable burning of scrap in a generator
     B:enableBurningScrap=true
@@ -93,8 +99,6 @@ general {
 
     # Enable hiding of secret recipes in CraftGuide/NEI
     B:enableSecretRecipeHiding=true
-
-    # Enable steam-outputting reactors if Railcraft is installed
     B:enableSteamReactor=false
 
     # Enable calculation of inventory weight when going through a teleporter
@@ -331,6 +335,7 @@ item {
     I:itemWeedEx=29849
     I:itemcrystalmemory=29776
     I:obscurator=29820
+    I:plasmaLauncher=29867
     I:reactorCondensator=29829
     I:reactorCondensatorLap=29827
     I:reactorCoolantSimple=29950
