--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -48,7 +48,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=honqi0il
+        S:lastStarted=honr7cod
     }
 
 }
