--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -191,6 +191,7 @@ alloysmelting {
     I:nuggetCobalt_236=236
     I:nuggetCopper_252=252
     I:nuggetElectrum_604=604
+    I:nuggetForce_392=392
     I:nuggetGold_784=784
     I:nuggetInvar_224=224
     I:nuggetIridium_768=768
@@ -590,6 +591,7 @@ canning {
     I:item.cheeseCurd_100=100
     I:item.chickenCooked_300=300
     I:item.chickenRaw_100=100
+    I:item.cookedLambchop_400=400
     I:item.cookie_100=100
     I:item.dye.blue_800=800
     I:item.dyePowder.black_800=800
@@ -609,6 +611,7 @@ canning {
     I:item.dyePowder.yellow_800=800
     I:item.fishCooked_300=300
     I:item.fishRaw_100=100
+    I:item.fortuneCookie_100=100
     I:item.goldenhead_200=200
     I:"item.magicbees:jellyBabies_100"=100
     I:item.melon_100=100
@@ -625,8 +628,10 @@ canning {
     I:item.potato_100=100
     I:item.pumpkinPie_400=400
     I:item.railcraft.fluid.creosote.bucket_200=200
+    I:item.rawLambchop_200=200
     I:item.rottenFlesh_200=200
     I:item.saguaro.fruit_200=200
+    I:item.soulWafer_100=100
     I:item.spiderEye_100=100
     I:item.trailmix_100=100
     I:item.waterdrop_100=100
@@ -641,6 +646,7 @@ canning {
     I:"mods.natura.items.BerryItem@4751b906.32767_100"=100
     I:"mods.natura.items.BerryItem@55b74fd.32767_100"=100
     I:"mods.natura.items.BerryItem@6439565e.32767_100"=100
+    I:"mods.natura.items.BerryItem@67d970d8.32767_100"=100
     I:"mods.natura.items.BerryItem@68c2c787.32767_100"=100
     I:"mods.natura.items.BerryMedley@12686fda.32767_300"=300
     I:"mods.natura.items.BerryMedley@1578361e.32767_300"=300
@@ -649,11 +655,13 @@ canning {
     I:"mods.natura.items.BerryMedley@464a5d7e.32767_300"=300
     I:"mods.natura.items.BerryMedley@4bb9a5cc.32767_300"=300
     I:"mods.natura.items.BerryMedley@626c9fd2.32767_300"=300
+    I:"mods.natura.items.BerryMedley@747faa2b.32767_300"=300
     I:"mods.natura.items.BerryMedley@7cd7c1f1.32767_300"=300
     I:"mods.natura.items.BerryMedley@7e7454cc.32767_300"=300
     I:"mods.natura.items.BowlStew@1254b3df.32767_300"=300
     I:"mods.natura.items.BowlStew@15c38000.32767_300"=300
     I:"mods.natura.items.BowlStew@173e7141.32767_300"=300
+    I:"mods.natura.items.BowlStew@1801e0d6.32767_300"=300
     I:"mods.natura.items.BowlStew@19e43b5e.32767_300"=300
     I:"mods.natura.items.BowlStew@20508d4a.32767_300"=300
     I:"mods.natura.items.BowlStew@2076e30.32767_300"=300
@@ -661,6 +669,7 @@ canning {
     I:"mods.natura.items.BowlStew@3bd33f05.32767_300"=300
     I:"mods.natura.items.BowlStew@af6579a.32767_300"=300
     I:"mods.natura.items.NetherBerryItem@22ddfb06.32767_100"=100
+    I:"mods.natura.items.NetherBerryItem@2862b30e.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@481ef666.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@569f8ed9.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@5b7ffa5a.32767_100"=100
@@ -675,10 +684,12 @@ canning {
     I:"mods.natura.items.NetherFoodItem@4970c679.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@5fccda2b.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@6875aa7.32767_200"=200
+    I:"mods.natura.items.NetherFoodItem@697d28cd.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@728f695.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@76b5df0.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@9341aeb.32767_200"=200
     I:"tconstruct.items.DiamondApple@1b10bd74.32767_200"=200
+    I:"tconstruct.items.DiamondApple@23500dea.32767_200"=200
     I:"tconstruct.items.DiamondApple@29ce7ff2.32767_200"=200
     I:"tconstruct.items.DiamondApple@2acd47cb.32767_200"=200
     I:"tconstruct.items.DiamondApple@32f14515.32767_200"=200
@@ -904,6 +915,7 @@ compression {
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@18fde079.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@19336fab.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@195cb8a2.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@1a610dc.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@1cba73fc.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@2372f2d5.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@278ddea1.32767_true"=true
@@ -1006,6 +1018,8 @@ compression {
     B:tile.bop.saplings.appleSapling_true=true
     B:tile.cactus_true=true
     B:tile.flower_true=true
+    B:tile.forceLeaves_true=true
+    B:tile.forceSapling_true=true
     B:tile.leaves.oak_true=true
     B:tile.rose_true=true
     B:tile.sand_true=true
@@ -1664,6 +1678,7 @@ inductionsmelter {
     B:boltTitanium_true=true
     B:boltTungsten_true=true
     B:boltZinc_true=true
+    B:gemForce_true=true
     B:gemIridium_true=true
     B:ingotArdite_true=true
     B:ingotBatteryAlloy_true=true
@@ -2021,6 +2036,7 @@ lathe {
     I:bushNPlanks_10=10
     I:darkwoodNPlanks_10=10
     I:eucalyptusNPlanks_10=10
+    I:forceWood_10=10
     I:gemTanzanite_20=20
     I:gemTopaz_16=16
     I:ghostNPlanks_10=10
@@ -2135,6 +2151,7 @@ maceration {
     B:AppEng.Tools.QuartzShovel_true=true
     B:AppEng.Tools.QuartzSword_true=true
     B:NPlanks_true=true
+    B:"Wooden Force Slab_true"=true
     B:block.wood..slab_true=true
     B:block.wood.silverbell.slab_true=true
     B:blockAluminium_true=true
@@ -2201,6 +2218,7 @@ maceration {
     B:cellEmpty_true=true
     B:darkwoodNPlanks_true=true
     B:eucalyptusNPlanks_true=true
+    B:forceWood_true=true
     B:gemApatite_true=true
     B:gemCertusQuartz_true=true
     B:gemCharcoal_true=true
@@ -2606,6 +2624,7 @@ maceration {
     B:tile.for.planks2.32767_true=true
     B:tile.for.slabs1.32767_true=true
     B:tile.for.slabs2.32767_true=true
+    B:tile.forceSapling_true=true
     B:tile.furnace_true=true
     B:tile.hellrock_true=true
     B:tile.ladder_true=true
@@ -3027,6 +3046,7 @@ smelting {
     B:dustUranium_true=true
     B:dustWheat_true=true
     B:dustZinc_true=true
+    B:gemForce_true=true
     B:gemIridium_true=true
     B:ingotAluminium_true=true
     B:ingotAluminumBrass_true=true
@@ -3039,6 +3059,7 @@ smelting {
     B:ingotCobalt_true=true
     B:ingotCopper_true=true
     B:ingotElectrum_true=true
+    B:ingotForce_true=true
     B:ingotGold_true=true
     B:ingotInvar_true=true
     B:ingotIridium_true=true
