--- a/config/cofh/ThermalExpansion-Florbs.cfg
+++ b/config/cofh/ThermalExpansion-Florbs.cfg
@@ -36,6 +36,7 @@ whitelist {
     B:iron.molten=true
     B:lava=true
     B:lead.molten=true
+    B:liquidforce=true
     B:manyullyn.molten=true
     B:meat=true
     B:milk=true
