--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -260,6 +260,7 @@ symbol {
     B:modmat_tile.myst.fluid.myst.ink.black.enabled=true
     B:modmat_tile.netherbrick.enabled=true
     B:modmat_tile.netherquartz.enabled=true
+    B:modmat_tile.null.enabled=true
     B:modmat_tile.obsidian.enabled=true
     B:modmat_tile.orecoal.enabled=true
     B:modmat_tile.orediamond.enabled=true
