Added Modular Force Field

--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -646,11 +646,13 @@ canning {
     I:"mods.natura.items.BerryItem@4751b906.32767_100"=100
     I:"mods.natura.items.BerryItem@55b74fd.32767_100"=100
     I:"mods.natura.items.BerryItem@6439565e.32767_100"=100
+    I:"mods.natura.items.BerryItem@65ca2c4b.32767_100"=100
     I:"mods.natura.items.BerryItem@67d970d8.32767_100"=100
     I:"mods.natura.items.BerryItem@68c2c787.32767_100"=100
     I:"mods.natura.items.BerryMedley@12686fda.32767_300"=300
     I:"mods.natura.items.BerryMedley@1578361e.32767_300"=300
     I:"mods.natura.items.BerryMedley@375d90ca.32767_300"=300
+    I:"mods.natura.items.BerryMedley@3c222422.32767_300"=300
     I:"mods.natura.items.BerryMedley@438e2fc5.32767_300"=300
     I:"mods.natura.items.BerryMedley@464a5d7e.32767_300"=300
     I:"mods.natura.items.BerryMedley@4bb9a5cc.32767_300"=300
@@ -666,10 +668,12 @@ canning {
     I:"mods.natura.items.BowlStew@20508d4a.32767_300"=300
     I:"mods.natura.items.BowlStew@2076e30.32767_300"=300
     I:"mods.natura.items.BowlStew@28f01854.32767_300"=300
+    I:"mods.natura.items.BowlStew@34a8a14b.32767_300"=300
     I:"mods.natura.items.BowlStew@3bd33f05.32767_300"=300
     I:"mods.natura.items.BowlStew@af6579a.32767_300"=300
     I:"mods.natura.items.NetherBerryItem@22ddfb06.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@2862b30e.32767_100"=100
+    I:"mods.natura.items.NetherBerryItem@33fc018e.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@481ef666.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@569f8ed9.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@5b7ffa5a.32767_100"=100
@@ -683,6 +687,7 @@ canning {
     I:"mods.natura.items.NetherFoodItem@3c401f3f.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@4970c679.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@5fccda2b.32767_200"=200
+    I:"mods.natura.items.NetherFoodItem@65725305.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@6875aa7.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@697d28cd.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@728f695.32767_200"=200
@@ -692,6 +697,7 @@ canning {
     I:"tconstruct.items.DiamondApple@23500dea.32767_200"=200
     I:"tconstruct.items.DiamondApple@29ce7ff2.32767_200"=200
     I:"tconstruct.items.DiamondApple@2acd47cb.32767_200"=200
+    I:"tconstruct.items.DiamondApple@2af55def.32767_200"=200
     I:"tconstruct.items.DiamondApple@32f14515.32767_200"=200
     I:"tconstruct.items.DiamondApple@35d3125a.32767_200"=200
     I:"tconstruct.items.DiamondApple@47d6e53.32767_200"=200
@@ -919,6 +925,7 @@ compression {
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@1cba73fc.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@2372f2d5.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@278ddea1.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@2a0080d0.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@34cdcafc.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@35b9b89.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@3a452494.32767_true"=true
