--- a/config/Modular Force Field System.cfg
+++ b/config/Modular Force Field System.cfg
@@ -16,6 +16,15 @@ block {
 
 
 ####################
+# crafting
+####################
+
+crafting {
+    B:"Allow item.mffs:moduleConfiscate Crafting"=true
+}
+
+
+####################
 # general
 ####################
 
