--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -638,6 +638,7 @@ canning {
     I:itemFuelCoalCmpr_100=100
     I:itemFuelPlantCmpr_100=100
     I:itemGrinPowder_800=800
+    I:"mods.natura.items.BerryItem@18bd20b1.32767_100"=100
     I:"mods.natura.items.BerryItem@1abade9b.32767_100"=100
     I:"mods.natura.items.BerryItem@1b8b58cc.32767_100"=100
     I:"mods.natura.items.BerryItem@26588261.32767_100"=100
@@ -649,10 +650,13 @@ canning {
     I:"mods.natura.items.BerryItem@65ca2c4b.32767_100"=100
     I:"mods.natura.items.BerryItem@67d970d8.32767_100"=100
     I:"mods.natura.items.BerryItem@68c2c787.32767_100"=100
+    I:"mods.natura.items.BerryItem@735b9e55.32767_100"=100
     I:"mods.natura.items.BerryMedley@12686fda.32767_300"=300
     I:"mods.natura.items.BerryMedley@1578361e.32767_300"=300
+    I:"mods.natura.items.BerryMedley@28ad5127.32767_300"=300
     I:"mods.natura.items.BerryMedley@375d90ca.32767_300"=300
     I:"mods.natura.items.BerryMedley@3c222422.32767_300"=300
+    I:"mods.natura.items.BerryMedley@3f8199e.32767_300"=300
     I:"mods.natura.items.BerryMedley@438e2fc5.32767_300"=300
     I:"mods.natura.items.BerryMedley@464a5d7e.32767_300"=300
     I:"mods.natura.items.BerryMedley@4bb9a5cc.32767_300"=300
@@ -670,7 +674,10 @@ canning {
     I:"mods.natura.items.BowlStew@28f01854.32767_300"=300
     I:"mods.natura.items.BowlStew@34a8a14b.32767_300"=300
     I:"mods.natura.items.BowlStew@3bd33f05.32767_300"=300
+    I:"mods.natura.items.BowlStew@3cf79190.32767_300"=300
+    I:"mods.natura.items.BowlStew@5b7ffa5a.32767_300"=300
     I:"mods.natura.items.BowlStew@af6579a.32767_300"=300
+    I:"mods.natura.items.NetherBerryItem@20ae6262.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@22ddfb06.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@2862b30e.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@33fc018e.32767_100"=100
@@ -681,7 +688,9 @@ canning {
     I:"mods.natura.items.NetherBerryItem@649d97ca.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@6c12230b.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@6c3f543c.32767_100"=100
+    I:"mods.natura.items.NetherBerryItem@779760e9.32767_100"=100
     I:"mods.natura.items.NetherBerryItem@88aa8d3.32767_100"=100
+    I:"mods.natura.items.NetherFoodItem@1559d61b.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@2be25129.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@38fdf53f.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@3c401f3f.32767_200"=200
@@ -693,11 +702,14 @@ canning {
     I:"mods.natura.items.NetherFoodItem@728f695.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@76b5df0.32767_200"=200
     I:"mods.natura.items.NetherFoodItem@9341aeb.32767_200"=200
+    I:"mods.natura.items.NetherFoodItem@aaaec4e.32767_200"=200
     I:"tconstruct.items.DiamondApple@1b10bd74.32767_200"=200
+    I:"tconstruct.items.DiamondApple@2175a435.32767_200"=200
     I:"tconstruct.items.DiamondApple@23500dea.32767_200"=200
     I:"tconstruct.items.DiamondApple@29ce7ff2.32767_200"=200
     I:"tconstruct.items.DiamondApple@2acd47cb.32767_200"=200
     I:"tconstruct.items.DiamondApple@2af55def.32767_200"=200
+    I:"tconstruct.items.DiamondApple@2f0d59a4.32767_200"=200
     I:"tconstruct.items.DiamondApple@32f14515.32767_200"=200
     I:"tconstruct.items.DiamondApple@35d3125a.32767_200"=200
     I:"tconstruct.items.DiamondApple@47d6e53.32767_200"=200
@@ -917,6 +929,7 @@ compression {
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@12b520a.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@12f2d9ec.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@15071f28.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@173b1696.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@18be08e.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@18fde079.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@19336fab.32767_true"=true
@@ -945,6 +958,7 @@ compression {
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@5cc5450c.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@650a73bc.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@6e172129.32767_true"=true
+    B:"biomesoplenty.itemblocks.ItemBlockLeaves@6f253de9.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@7400e99e.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@7595e308.32767_true"=true
     B:"biomesoplenty.itemblocks.ItemBlockLeaves@79ed232c.32767_true"=true
